# PyEduWebHT07

./: README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 00b1b6bf7ee1_init.py  1994331db731_.py  29d8a0bf12e9_init.py  2da39177abf1_init.py  5e60a441a0c6_.py  804fc31f1575_init.py  8637becc63dd_init.py  a044a8d1130c_init.py  d3a5fe88940d_init.py  fa398170e91e_init.py
pyeduwebht06/db/: models.py
pyeduwebht07/: __main__.py  my_select.py  seed.py
pyeduwebht07/conf/: db.ini
pyeduwebht07/db/: config.py  connection.py  models.py
