[tool.poetry]
name = "hometask-07"
version = "0.1.0"
description = ""
authors = ["Oleksii Petrashov <oleksii.petrashov@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8,<4"
faker = "^18.10.1"
pretty-tables = "^2.0.3"
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
